--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         alt="Logotipo da HZC."
         class="cabecalho__logo"
       />
+      <p class="cabecalho__perfil">Bruno Lopez</p>
       <button class="cabecalho__notificacao" aria-label="Notificação">
         <i></i>
       </button>
@@ -73,6 +74,57 @@
             Assistir agora
           </button>
         </div>
+      </article>
+      <article class="cartao cartao--recentes">
+        <h3 class="cartao__titulo">Vídeos recentes</h3>
+        <a href="#" class="cartao__link">Ver todos</a>
+        <ul class="cartao__lista">
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item-thumbnail"
+            />
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopez</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item-thumbnail"
+            />
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopez</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item-thumbnail"
+            />
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopez</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item-thumbnail"
+            />
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopez</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item-thumbnail"
+            />
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopez</p>
+          </li>
+        </ul>
       </article>
       <section class="secao">
         <h3 class="titulo-secao">Vídeos mais vistos</h3>
@@ -141,6 +193,57 @@
           </div>
         </article>
       </section>
+      <article class="cartao cartao--recentes">
+        <h3 class="cartao__titulo">Vídeos recentes</h3>
+        <a href="#" class="cartao__link">Ver todos</a>
+        <ul class="cartao__lista">
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item-thumbnail"
+            />
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopez</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item-thumbnail"
+            />
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopez</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item-thumbnail"
+            />
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopez</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item-thumbnail"
+            />
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopez</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item-thumbnail"
+            />
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopez</p>
+          </li>
+        </ul>
+      </article>
       <article class="cartao cartao--destaque">
         <img
           src="assets/img/banner-mobile_1.png"
