--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
       <img
         src="assets/img/logo.svg"
-        alt="Logotipo da HZC."
+        alt="Logotipo da HZC"
         class="cabecalho__logo"
       />
       <p class="cabecalho__perfil">Bruno Lopez</p>
@@ -29,8 +29,8 @@
     </header>
     <nav class="menu-lateral">
       <img
-        src="/assets/img/logo.svg"
-        alt="Logotipo da HZC."
+        src="assets/img/logo.svg"
+        alt="Logotipo da HZC"
         class="menu-lateral__logo"
       />
       <a
@@ -54,11 +54,16 @@
     </nav>
     <main class="principal">
       <h2 class="titulo-pagina">Início</h2>
-      <article class="cartao cartao--destaque">
+      <article class="cartao cartao--destaque destaque-video">
         <img
           src="assets/img/banner-mobile_1.png"
-          alt="Banner"
-          class="cartao__imagem"
+          alt="Banner do cartao"
+          class="cartao__imagem cartao__imagem--mobile"
+        />
+        <img
+          src="assets/img/banner_1.png"
+          alt="Banner do cartao"
+          class="cartao__imagem cartao__imagem--desktop"
         />
         <div class="cartao__conteudo">
           <p class="cartao__destaque">Vídeo em destaque</p>
@@ -75,7 +80,7 @@
           </button>
         </div>
       </article>
-      <article class="cartao cartao--recentes">
+      <article class="cartao cartao--recentes videos-recentes">
         <h3 class="cartao__titulo">Vídeos recentes</h3>
         <a href="#" class="cartao__link">Ver todos</a>
         <ul class="cartao__lista">
@@ -126,7 +131,7 @@
           </li>
         </ul>
       </article>
-      <section class="secao">
+      <section class="secao secao-videos">
         <h3 class="titulo-secao">Vídeos mais vistos</h3>
         <article class="cartao">
           <img
@@ -193,7 +198,7 @@
           </div>
         </article>
       </section>
-      <article class="cartao cartao--recentes">
+      <article class="cartao cartao--recentes produtos-recentes">
         <h3 class="cartao__titulo">Vídeos recentes</h3>
         <a href="#" class="cartao__link">Ver todos</a>
         <ul class="cartao__lista">
@@ -244,11 +249,16 @@
           </li>
         </ul>
       </article>
-      <article class="cartao cartao--destaque">
+      <article class="cartao cartao--destaque destaque-produtos">
         <img
-          src="assets/img/banner-mobile_1.png"
-          alt="Banner"
-          class="cartao__imagem"
+          src="assets/img/banner-mobile_2.png"
+          alt="Banner do cartao"
+          class="cartao__imagem cartao__imagem--mobile"
+        />
+        <img
+          src="assets/img/banner_2.png"
+          alt="Banner do cartao"
+          class="cartao__imagem cartao__imagem--desktop"
         />
         <div class="cartao__conteudo">
           <p class="cartao__destaque">Vídeo em destaque</p>
@@ -265,7 +275,7 @@
           </button>
         </div>
       </article>
-      <section class="secao">
+      <section class="secao secao-produtos">
         <h3 class="titulo-secao">Vídeos mais vistos</h3>
         <article class="cartao">
           <img
